--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@ body {
   background-color: #b2aba9;
   position: relative;
 }
-.container {
+.contain {
   background-color: #f2f2f2;
   position: absolute;
   width: 60%;
@@ -18,7 +18,7 @@ body {
   border-top-right-radius: 10px;
   background-color: #4CAF50;
   color: #fff;
-  padding: 5px 30px;
+  padding: 10px 30px;
   margin-bottom: 10px;
 }
 input[type="text"],input[type="email"],input[type="password"],textarea {
